# hf-models-scout

./: .gitignore  1-quick-scan.bat  2-full-scan.bat  3-deep-scan.bat  4-test-scan.bat  LICENSE  README.md  install.bat  pyproject.toml
src/hf_models_scout/: __init__.py  config.py  fetcher.py  filter.py  reporter.py  scout.py
